--- a/class-01/review/demo/index.html
+++ b/class-01/review/demo/index.html
@@ -30,19 +30,7 @@
 }
 </style>
 
-<script>
-    let waterBottleCount = 20
-    // console.log(waterBottleCount)
 
-
-    let name = prompt('What is your favorite name?')
-   let color = prompt('What is your favorite color?')
-
-
-   alert('Hi ' + name + ' I hate this color ' + color)
-   alert(color)
-
-</script>
 
 <body> <!--Everythign you will see-->
     <header>
@@ -66,5 +54,20 @@
     </ol>
     <section>
     </main>
+
+    <script  type="text/javascript" defer>
+      let waterBottleCount = 20
+      // console.log(waterBottleCount)
+
+
+      let name = prompt('What is your favorite name?')
+     let color = prompt('What is your favorite color?')
+
+
+     alert('Hi ' + name + ' I hate this color ' + color)
+     alert(color)
+
+  </script>
 </body>
+
 </html>
