--- a/class-02/demo/class_demo/index.html
+++ b/class-02/demo/class_demo/index.html
@@ -17,7 +17,7 @@
 
   <main>
     <section>
-      <h1>This is a h1</h1>
+      <h1>This is a h1 change</h1>
 
       <p>Random content<span>Big span</span></p>
     </section>
